--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -1841,94 +1841,100 @@
           "pro": "Pro",
           "free": "Free"
         },
-        "planFeaturesList": {
-          "title": "Детали плана",
-          "comingSoon": "Скоро",
-          "storage": " зашифрованного хранилища с нулевым знанием",
-          "1TB": {
-            "title": "Базовый",
-            "features": [
-              "Постквантовое шифрование",
-              "Сверхбыстрый безлимитный VPN (FR)",
-              "Антивирус",
-              "Резервное копирование ваших файлов",
-              "Защищенный паролем обмен файлами",
-              "Соответствие GDPR",
-              "Двухфакторная аутентификация (2FA)",
-              "Поддержка CLI, WebDav и Rclone"
-            ]
-          },
-          "3TB": {
-            "title": "Премиум",
-            "features": [
-              "Постквантовое шифрование",
-              "Сверхбыстрый безлимитный VPN (FR, DE, PL)",
-              "Антивирус",
-              "Резервное копирование ваших файлов",
-              "Защищенный паролем обмен файлами",
-              "Приглашение, обмен и сотрудничество",
-              "Соответствие GDPR",
-              "Двухфакторная аутентификация (2FA)",
-              "Поддержка CLI, WebDav и Rclone"
-            ],
-            "comingSoonFeatures": ["Очиститель устройств", "Мониторинг даркнета"]
-          },
-          "5TB": {
-            "title": "Максимальный",
-            "features": [
-              "Постквантовое шифрование",
-              "Сверхбыстрый безлимитный VPN (FR, DE, PL, CA, UK)",
-              "Антивирус",
-              "Резервное копирование ваших файлов",
-              "Защищенный паролем обмен файлами",
-              "Приглашение, обмен и сотрудничество",
-              "Соответствие GDPR",
-              "Двухфакторная аутентификация (2FA)",
-              "Поддержка CLI, WebDav и Rclone"
-            ],
-            "comingSoonFeatures": ["Очиститель устройств", "Мониторинг даркнета", "Meet", "Mail"]
-          },
-          "1GB": {
-            "title": "Бесплатный",
-            "features": ["Бесплатный стандартный VPN (FR)", "Поддержка CLI, WebDav и Rclone"]
-          }
+       "planFeaturesList": {
+        "title": "Детали плана",
+        "comingSoon": "Скоро",
+        "storage": " зашифрованного хранилища с нулевым знанием",
+        "1TB": {
+          "title": "Базовый",
+          "features": [
+            "1TB зашифрованного хранилища с нулевым знанием",
+            "Постквантовое шифрование",
+            "Сверхбыстрый безлимитный VPN (FR)",
+            "Антивирус",
+            "Резервное копирование ваших файлов",
+            "Защищенный паролем обмен файлами",
+            "Соответствие GDPR",
+            "Двухфакторная аутентификация (2FA)"
+          ]
         },
-        "businessPlanFeaturesList": {
-          "title": "Детали плана",
-          "storage": " хранилища",
-          "1TB": {
-            "title": "Стандартный",
-            "features": [
-              "Постквантовое шифрование",
-              "Сверхбыстрый безлимитный VPN (FR, DE, PL)",
-              "Антивирус",
-              "Резервное копирование ваших файлов",
-              "Защищенный паролем обмен файлами",
-              "Приглашение, обмен и сотрудничество",
-              "Соответствие GDPR",
-              "Двухфакторная аутентификация (2FA)",
-              "Поддержка CLI, WebDav и Rclone",
-              "Управление выставлением счетов и платежами"
-            ],
-            "comingSoonFeatures": ["Очиститель устройств", "Мониторинг даркнета"]
-          },
-          "2TB": {
-            "title": "Про",
-            "features": [
-              "Постквантовое шифрование",
-              "Сверхбыстрый безлимитный VPN (FR, DE, PL, CA, UK)",
-              "Антивирус",
-              "Резервное копирование ваших файлов",
-              "Защищенный паролем обмен файлами",
-              "Приглашение, обмен и сотрудничество",
-              "Соответствие GDPR",
-              "Двухфакторная аутентификация (2FA)",
-              "Поддержка CLI, WebDav и Rclone",
-              "Управление выставлением счетов и платежами"
-            ],
-            "comingSoonFeatures": ["Очиститель устройств", "Мониторинг даркнета", "Meet", "Mail"]
-          }
+        "3TB": {
+          "title": "Премиум",
+          "features": [
+            "3TB зашифрованного хранилища с нулевым знанием",
+            "Постквантовое шифрование",
+            "Сверхбыстрый безлимитный VPN (FR, DE, PL)",
+            "Антивирус",
+            "Резервное копирование ваших файлов",
+            "Защищенный паролем обмен файлами",
+            "Приглашение, обмен и сотрудничество",
+            "Соответствие GDPR",
+            "Двухфакторная аутентификация (2FA)"
+          ],
+          "comingSoonFeatures": ["Очиститель устройств", "Мониторинг даркнета"]
         },
+        "5TB": {
+          "title": "Максимальный",
+          "features": [
+            "5TB зашифрованного хранилища с нулевым знанием",
+            "Постквантовое шифрование",
+            "Сверхбыстрый безлимитный VPN (FR, DE, PL, CA, UK)",
+            "Антивирус",
+            "Резервное копирование ваших файлов",
+            "Защищенный паролем обмен файлами",
+            "Приглашение, обмен и сотрудничество",
+            "Соответствие GDPR",
+            "Двухфакторная аутентификация (2FA)",
+            "Поддержка CLI, WebDav, NAS и Rclone"
+          ],
+          "comingSoonFeatures": ["Очиститель устройств", "Мониторинг даркнета", "Meet", "Mail"]
+        },
+        "1GB": {
+          "title": "Бесплатный",
+          "features": [
+            "1GB зашифрованного хранилища с нулевым знанием",
+            "Бесплатный стандартный VPN (FR)"
+          ]
+        }
+      },
+      "businessPlanFeaturesList": {
+        "title": "Детали плана",
+        "storage": " хранилища",
+        "1TB": {
+          "title": "Стандартный",
+          "features": [
+            "1TB зашифрованного хранилища с нулевым знанием на пользователя",
+            "Постквантовое шифрование",
+            "Сверхбыстрый безлимитный VPN (FR, DE, PL)",
+            "Антивирус",
+            "Резервное копирование ваших файлов",
+            "Защищенный паролем обмен файлами",
+            "Приглашение, обмен и сотрудничество",
+            "Соответствие GDPR",
+            "Двухфакторная аутентификация (2FA)",
+            "Поддержка CLI и WebDav",
+            "Управление выставлением счетов и платежами"
+          ],
+          "comingSoonFeatures": ["Очиститель устройств", "Мониторинг даркнета"]
+        },
+        "2TB": {
+          "title": "Про",
+          "features": [
+            "2TB зашифрованного хранилища с нулевым знанием на пользователя",
+            "Постквантовое шифрование",
+            "Сверхбыстрый безлимитный VPN (FR, DE, PL, CA, UK)",
+            "Антивирус",
+            "Резервное копирование ваших файлов",
+            "Защищенный паролем обмен файлами",
+            "Приглашение, обмен и сотрудничество",
+            "Соответствие GDPR",
+            "Двухфакторная аутентификация (2FA)",
+            "Поддержка CLI, WebDav, Rclone и NAS",
+            "Управление выставлением счетов и платежами"
+          ],
+          "comingSoonFeatures": ["Очиститель устройств", "Мониторинг даркнета", "Meet", "Mail"]
+        }
+      },
         "user": "Пользователь"
       },
       "billing": {
