--- a/src/app/i18n/locales/tw.json
+++ b/src/app/i18n/locales/tw.json
@@ -1832,94 +1832,100 @@
           "pro": "專業版",
           "free": "免費版"
         },
-        "planFeaturesList": {
-          "title": "方案詳情",
-          "comingSoon": "即將推出",
-          "storage": " 零知識加密儲存",
-          "1TB": {
-            "title": "基本版",
-            "features": [
-              "後量子加密",
-              "超快無限制VPN（法國）",
-              "防毒",
-              "檔案備份",
-              "密碼保護檔案共享",
-              "符合GDPR",
-              "雙因素認證（2FA）",
-              "支援CLI、WebDav和Rclone"
-            ]
-          },
-          "3TB": {
-            "title": "進階版",
-            "features": [
-              "後量子加密",
-              "超快無限制VPN（法國、德國、波蘭）",
-              "防毒",
-              "檔案備份",
-              "密碼保護檔案共享",
-              "邀請、共享和協作",
-              "符合GDPR",
-              "雙因素認證（2FA）",
-              "支援CLI、WebDav和Rclone"
-            ],
-            "comingSoonFeatures": ["裝置清理器", "暗網監控"]
-          },
-          "5TB": {
-            "title": "旗艦版",
-            "features": [
-              "後量子加密",
-              "超快無限制VPN（法國、德國、波蘭）",
-              "防毒",
-              "檔案備份",
-              "密碼保護檔案共享",
-              "邀請、共享和協作",
-              "符合GDPR",
-              "雙因素認證（2FA）",
-              "支援CLI、WebDav和Rclone"
-            ],
-            "comingSoonFeatures": ["裝置清理器", "暗網監控", "視訊會議", "郵件"]
-          },
-          "1GB": {
-            "title": "免費版",
-            "features": ["免費標準VPN（法國）", "支援CLI、WebDav和Rclone"]
-          }
+       "planFeaturesList": {
+        "title": "方案詳情",
+        "comingSoon": "即將推出",
+        "storage": " 零知識加密儲存",
+        "1TB": {
+          "title": "基本版",
+          "features": [
+            "1TB零知識加密儲存",
+            "後量子加密",
+            "超快無限制VPN（法國）",
+            "防毒",
+            "檔案備份",
+            "密碼保護檔案共享",
+            "符合GDPR",
+            "雙因素認證（2FA）"
+          ]
         },
-        "businessPlanFeaturesList": {
-          "title": "方案詳情",
-          "storage": " 儲存空間",
-          "1TB": {
-            "title": "標準版",
-            "features": [
-              "後量子加密",
-              "超快無限制VPN（法國、德國、波蘭）",
-              "防毒",
-              "檔案備份",
-              "密碼保護檔案共享",
-              "邀請、共享和協作",
-              "符合GDPR",
-              "雙因素認證（2FA）",
-              "支援CLI、WebDav和Rclone",
-              "管理帳戶帳單和支付"
-            ],
-            "comingSoonFeatures": ["裝置清理器", "暗網監控"]
-          },
-          "2TB": {
-            "title": "專業版",
-            "features": [
-              "後量子加密",
-              "超快無限制VPN（法國、德國、波蘭）",
-              "防毒",
-              "檔案備份",
-              "密碼保護檔案共享",
-              "邀請、共享和協作",
-              "符合GDPR",
-              "雙因素認證（2FA）",
-              "支援CLI、WebDav和Rclone",
-              "管理帳戶帳單和支付"
-            ],
-            "comingSoonFeatures": ["裝置清理器", "暗網監控", "視訊會議", "郵件"]
-          }
+        "3TB": {
+          "title": "進階版",
+          "features": [
+            "3TB零知識加密儲存",
+            "後量子加密",
+            "超快無限制VPN（法國、德國、波蘭）",
+            "防毒",
+            "檔案備份",
+            "密碼保護檔案共享",
+            "邀請、共享和協作",
+            "符合GDPR",
+            "雙因素認證（2FA）"
+          ],
+          "comingSoonFeatures": ["裝置清理器", "暗網監控"]
         },
+        "5TB": {
+          "title": "旗艦版",
+          "features": [
+            "5TB零知識加密儲存",
+            "後量子加密",
+            "超快無限制VPN（法國、德國、波蘭、加拿大、英國）",
+            "防毒",
+            "檔案備份",
+            "密碼保護檔案共享",
+            "邀請、共享和協作",
+            "符合GDPR",
+            "雙因素認證（2FA）",
+            "支援CLI、WebDav、NAS和Rclone"
+          ],
+          "comingSoonFeatures": ["裝置清理器", "暗網監控", "視訊會議", "郵件"]
+        },
+        "1GB": {
+          "title": "免費版",
+          "features": [
+            "1GB零知識加密儲存",
+            "免費標準VPN（法國）"
+          ]
+        }
+      },
+      "businessPlanFeaturesList": {
+        "title": "方案詳情",
+        "storage": " 儲存空間",
+        "1TB": {
+          "title": "標準版",
+          "features": [
+            "每位使用者1TB零知識加密儲存",
+            "後量子加密",
+            "超快無限制VPN（法國、德國、波蘭）",
+            "防毒",
+            "檔案備份",
+            "密碼保護檔案共享",
+            "邀請、共享和協作",
+            "符合GDPR",
+            "雙因素認證（2FA）",
+            "支援CLI和WebDav",
+            "管理帳戶帳單和支付"
+          ],
+          "comingSoonFeatures": ["裝置清理器", "暗網監控"]
+        },
+        "2TB": {
+          "title": "專業版",
+          "features": [
+            "每位使用者2TB零知識加密儲存",
+            "後量子加密",
+            "超快無限制VPN（法國、德國、波蘭、加拿大、英國）",
+            "防毒",
+            "檔案備份",
+            "密碼保護檔案共享",
+            "邀請、共享和協作",
+            "符合GDPR",
+            "雙因素認證（2FA）",
+            "支援CLI、WebDav、Rclone和NAS",
+            "管理帳戶帳單和支付"
+          ],
+          "comingSoonFeatures": ["裝置清理器", "暗網監控", "視訊會議", "郵件"]
+        }
+      },
         "user": "用戶"
       },
       "billing": {
