--- a/src/app/i18n/locales/es.json
+++ b/src/app/i18n/locales/es.json
@@ -1860,19 +1860,20 @@
           "1TB": {
             "title": "Esencial",
             "features": [
+              "1TB de almacenamiento cifrado con conocimiento cero",
               "Cifrado post-cuántico",
               "VPN ilimitada ultrarrápida (FR)",
               "Antivirus",
               "Copia de seguridad de tus archivos",
               "Compartir archivos protegidos con contraseña",
               "Cumplimiento del RGPD",
-              "Autenticación de dos factores (2FA)",
-              "Soporte para CLI, WebDav y Rclone"
+              "Autenticación de dos factores (2FA)"
             ]
           },
           "3TB": {
             "title": "Premium",
             "features": [
+              "3TB de almacenamiento cifrado con conocimiento cero",
               "Cifrado post-cuántico",
               "VPN ilimitada ultrarrápida (FR, DE, PL)",
               "Antivirus",
@@ -1880,14 +1881,14 @@
               "Compartir archivos protegidos con contraseña",
               "Invitar, compartir y colaborar",
               "Cumplimiento del RGPD",
-              "Autenticación de dos factores (2FA)",
-              "Soporte para CLI, WebDav y Rclone"
+              "Autenticación de dos factores (2FA)"
             ],
             "comingSoonFeatures": ["Limpiador de dispositivos", "Monitor de Dark Web"]
           },
           "5TB": {
             "title": "Ultimate",
             "features": [
+              "5TB de almacenamiento cifrado con conocimiento cero",
               "Cifrado post-cuántico",
               "VPN ilimitada ultrarrápida (FR, DE, PL, CA, UK)",
               "Antivirus",
@@ -1896,13 +1897,16 @@
               "Invitar, compartir y colaborar",
               "Cumplimiento del RGPD",
               "Autenticación de dos factores (2FA)",
-              "Soporte para CLI, WebDav y Rclone"
+              "Soporte para CLI, WebDav, NAS y Rclone"
             ],
             "comingSoonFeatures": ["Limpiador de dispositivos", "Monitor de Dark Web", "Meet", "Mail"]
           },
           "1GB": {
             "title": "Gratis",
-            "features": ["VPN estándar gratuita (FR)", "Soporte para CLI, WebDav y Rclone"]
+            "features": [
+              "1GB de almacenamiento cifrado con conocimiento cero",
+              "VPN estándar gratuita (FR)"
+            ]
           }
         },
         "businessPlanFeaturesList": {
@@ -1911,6 +1915,7 @@
           "1TB": {
             "title": "Estándar",
             "features": [
+              "1TB de almacenamiento cifrado con conocimiento cero por usuario",
               "Cifrado post-cuántico",
               "VPN ilimitada ultrarrápida (FR, DE, PL)",
               "Antivirus",
@@ -1919,7 +1924,7 @@
               "Invitar, compartir y colaborar",
               "Cumplimiento del RGPD",
               "Autenticación de dos factores (2FA)",
-              "Soporte para CLI, WebDav y Rclone",
+              "Soporte para CLI y WebDav",
               "Gestionar facturación y pagos de la cuenta"
             ],
             "comingSoonFeatures": ["Limpiador de dispositivos", "Monitor de Dark Web"]
@@ -1927,6 +1932,7 @@
           "2TB": {
             "title": "Pro",
             "features": [
+              "2TB de almacenamiento cifrado con conocimiento cero por usuario",
               "Cifrado post-cuántico",
               "VPN ilimitada ultrarrápida (FR, DE, PL, CA, UK)",
               "Antivirus",
@@ -1935,7 +1941,7 @@
               "Invitar, compartir y colaborar",
               "Cumplimiento del RGPD",
               "Autenticación de dos factores (2FA)",
-              "Soporte para CLI, WebDav y Rclone",
+              "Soporte para CLI, WebDav, Rclone y NAS",
               "Gestionar facturación y pagos de la cuenta"
             ],
             "comingSoonFeatures": ["Limpiador de dispositivos", "Monitor de Dark Web", "Meet", "Mail"]
