--- a/src/app/i18n/locales/fr.json
+++ b/src/app/i18n/locales/fr.json
@@ -1835,19 +1835,20 @@
           "1TB": {
             "title": "Essentiel",
             "features": [
+              "1TB de stockage chiffré à connaissance zéro",
               "Chiffrement post-quantique",
               "VPN illimité ultra rapide (FR)",
               "Antivirus",
               "Sauvegarde de vos fichiers",
               "Partage de fichiers protégés par mot de passe",
               "Conformité au RGPD",
-              "Authentification à deux facteurs (2FA)",
-              "Support CLI, WebDav et Rclone"
+              "Authentification à deux facteurs (2FA)"
             ]
           },
           "3TB": {
             "title": "Premium",
             "features": [
+              "3TB de stockage chiffré à connaissance zéro",
               "Chiffrement post-quantique",
               "VPN illimité ultra rapide (FR, DE, PL)",
               "Antivirus",
@@ -1855,14 +1856,14 @@
               "Partage de fichiers protégés par mot de passe",
               "Inviter, partager et collaborer",
               "Conformité au RGPD",
-              "Authentification à deux facteurs (2FA)",
-              "Support CLI, WebDav et Rclone"
+              "Authentification à deux facteurs (2FA)"
             ],
-            "comingSoonFeatures": ["Nettoyage de l’appareil", "Surveillance du dark web"]
+            "comingSoonFeatures": ["Nettoyage de l'appareil", "Surveillance du dark web"]
           },
           "5TB": {
             "title": "Ultimate",
             "features": [
+              "5TB de stockage chiffré à connaissance zéro",
               "Chiffrement post-quantique",
               "VPN illimité ultra rapide (FR, DE, PL, CA, UK)",
               "Antivirus",
@@ -1871,13 +1872,16 @@
               "Inviter, partager et collaborer",
               "Conformité au RGPD",
               "Authentification à deux facteurs (2FA)",
-              "Support CLI, WebDav et Rclone"
+              "Support CLI, WebDav, NAS et Rclone"
             ],
-            "comingSoonFeatures": ["Nettoyage de l’appareil", "Surveillance du dark web", "Meet", "Mail"]
+            "comingSoonFeatures": ["Nettoyage de l'appareil", "Surveillance du dark web", "Meet", "Mail"]
           },
           "1GB": {
             "title": "Gratuit",
-            "features": ["VPN standard gratuit (FR)", "Support CLI, WebDav et Rclone"]
+            "features": [
+              "1GB de stockage chiffré à connaissance zéro",
+              "VPN standard gratuit (FR)"
+            ]
           }
         },
         "businessPlanFeaturesList": {
@@ -1886,6 +1890,7 @@
           "1TB": {
             "title": "Standard",
             "features": [
+              "1TB de stockage chiffré à connaissance zéro par utilisateur",
               "Chiffrement post-quantique",
               "VPN illimité ultra rapide (FR, DE, PL)",
               "Antivirus",
@@ -1894,14 +1899,15 @@
               "Inviter, partager et collaborer",
               "Conformité au RGPD",
               "Authentification à deux facteurs (2FA)",
-              "Support CLI, WebDav et Rclone",
+              "Support CLI et WebDav",
               "Gérer la facturation et les paiements du compte"
             ],
-            "comingSoonFeatures": ["Nettoyage de l’appareil", "Surveillance du dark web"]
+            "comingSoonFeatures": ["Nettoyage de l'appareil", "Surveillance du dark web"]
           },
           "2TB": {
             "title": "Pro",
             "features": [
+              "2TB de stockage chiffré à connaissance zéro par utilisateur",
               "Chiffrement post-quantique",
               "VPN illimité ultra rapide (FR, DE, PL, CA, UK)",
               "Antivirus",
@@ -1910,10 +1916,10 @@
               "Inviter, partager et collaborer",
               "Conformité au RGPD",
               "Authentification à deux facteurs (2FA)",
-              "Support CLI, WebDav et Rclone",
+              "Support CLI, WebDav, Rclone et NAS",
               "Gérer la facturation et les paiements du compte"
             ],
-            "comingSoonFeatures": ["Nettoyage de l’appareil", "Surveillance du dark web", "Meet", "Mail"]
+            "comingSoonFeatures": ["Nettoyage de l'appareil", "Surveillance du dark web", "Meet", "Mail"]
           }
         },
         "user": "Utilisateur"
