--- a/src/app/i18n/locales/it.json
+++ b/src/app/i18n/locales/it.json
@@ -1943,19 +1943,20 @@
           "1TB": {
             "title": "Essenziale",
             "features": [
+              "1TB di archiviazione criptata a conoscenza zero",
               "Crittografia post-quantistica",
               "VPN illimitata ultraveloce (FR)",
               "Antivirus",
               "Backup dei tuoi file",
               "Condivisione file protetta da password",
               "Conformità GDPR",
-              "Autenticazione a due fattori (2FA)",
-              "Supporto CLI, WebDav e Rclone"
+              "Autenticazione a due fattori (2FA)"
             ]
           },
           "3TB": {
             "title": "Premium",
             "features": [
+              "3TB di archiviazione criptata a conoscenza zero",
               "Crittografia post-quantistica",
               "VPN illimitata ultraveloce (FR, DE, PL)",
               "Antivirus",
@@ -1963,14 +1964,14 @@
               "Condivisione file protetta da password",
               "Invita, condividi e collabora",
               "Conformità GDPR",
-              "Autenticazione a due fattori (2FA)",
-              "Supporto CLI, WebDav e Rclone"
+              "Autenticazione a due fattori (2FA)"
             ],
             "comingSoonFeatures": ["Pulitore dispositivi", "Monitoraggio Dark Web"]
           },
           "5TB": {
             "title": "Ultimate",
             "features": [
+              "5TB di archiviazione criptata a conoscenza zero",
               "Crittografia post-quantistica",
               "VPN illimitata ultraveloce (FR, DE, PL, CA, UK)",
               "Antivirus",
@@ -1979,13 +1980,16 @@
               "Invita, condividi e collabora",
               "Conformità GDPR",
               "Autenticazione a due fattori (2FA)",
-              "Supporto CLI, WebDav e Rclone"
+              "Supporto CLI, WebDav, NAS e Rclone"
             ],
             "comingSoonFeatures": ["Pulitore dispositivi", "Monitoraggio Dark Web", "Meet", "Mail"]
           },
           "1GB": {
             "title": "Gratuito",
-            "features": ["VPN standard gratuita (FR)", "Supporto CLI, WebDav e Rclone"]
+            "features": [
+              "1GB di archiviazione criptata a conoscenza zero",
+              "VPN standard gratuita (FR)"
+            ]
           }
         },
         "businessPlanFeaturesList": {
@@ -1994,6 +1998,7 @@
           "1TB": {
             "title": "Standard",
             "features": [
+              "1TB di archiviazione criptata a conoscenza zero per utente",
               "Crittografia post-quantistica",
               "VPN illimitata ultraveloce (FR, DE, PL)",
               "Antivirus",
@@ -2002,7 +2007,7 @@
               "Invita, condividi e collabora",
               "Conformità GDPR",
               "Autenticazione a due fattori (2FA)",
-              "Supporto CLI, WebDav e Rclone",
+              "Supporto CLI e WebDav",
               "Gestisci fatturazione e pagamenti dell'account"
             ],
             "comingSoonFeatures": ["Pulitore dispositivi", "Monitoraggio Dark Web"]
@@ -2010,6 +2015,7 @@
           "2TB": {
             "title": "Pro",
             "features": [
+              "2TB di archiviazione criptata a conoscenza zero per utente",
               "Crittografia post-quantistica",
               "VPN illimitata ultraveloce (FR, DE, PL, CA, UK)",
               "Antivirus",
@@ -2018,7 +2024,7 @@
               "Invita, condividi e collabora",
               "Conformità GDPR",
               "Autenticazione a due fattori (2FA)",
-              "Supporto CLI, WebDav e Rclone",
+              "Supporto CLI, WebDav, Rclone e NAS",
               "Gestisci fatturazione e pagamenti dell'account"
             ],
             "comingSoonFeatures": ["Pulitore dispositivi", "Monitoraggio Dark Web", "Meet", "Mail"]
