--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -7,8 +7,8 @@
     "label": {"blueText":"Get 87% off", "text":"in all  Plans"},
     "title": " Claim your exclusive discount!",
     "subTitle": {
-      "blueText":"Special offer:",
-      "text":"store files in privacy for even less"
+      "blueText":"Special offer!",
+      "text":"Store files in privacy for even less"
     },
     "ctaGet": "Accept invite",
     "ctaContinue":"Continue free",
