feat(shared): add new upgrade to dialogs

--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -4,14 +4,14 @@
     "logOut": "Log Out"
   },
   "featuresBanner": {
-    "label": {"blueText":"Get 87% off", "text":"in all  Plans"},
+    "label": { "blueText": "Get 87% off", "text": "in all  Plans" },
     "title": " Claim your exclusive discount!",
     "subTitle": {
-      "blueText":"Special offer!",
-      "text":"Store files in privacy for even less"
+      "blueText": "Special offer!",
+      "text": "Store files in privacy for even less"
     },
     "ctaGet": "Accept invite",
-    "ctaContinue":"Continue free",
+    "ctaContinue": "Continue free",
     "guarantee": "30-day money-back guarantee",
     "products": {
       "drive": "Drive",
@@ -1017,6 +1017,14 @@
       "teams": "Teams",
       "teamsWithAcces": "Teams with Access:",
       "shareButton": "Share"
+    },
+    "restrictedSharingModal": {
+      "title": "Upgrade to share files",
+      "subtitle": "Sharing files is not available on the Essential plan. Upgrade to unlock secure file sharing."
+    },
+    "restrictedPasswordDialog": {
+      "title": "Unlock password-protected sharing",
+      "subtitle": "Add an extra layer of security by protecting your shared links with a password."
     }
   },
   "form": {
@@ -1419,7 +1427,8 @@
     "more": "More",
     "continue": "Continue",
     "keepCurrent": "Keep current",
-    "logOut": "Log out"
+    "logOut": "Log out",
+    "locked": "Locked"
   },
   "drive": {
     "usage": "Usage",
@@ -1933,7 +1942,7 @@
           },
           "1GB": {
             "title": "Free",
-            "features": [ "1GB zero-knowledge encrypted storage","Free Standard VPN (FR)"]
+            "features": ["1GB zero-knowledge encrypted storage", "Free Standard VPN (FR)"]
           }
         },
         "businessPlanFeaturesList": {
