--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -994,7 +994,7 @@
       "title": "Обновите тариф, чтобы делиться файлами",
       "subtitle": "Общий доступ к файлам недоступен в тарифе Essential. Обновите тариф, чтобы открыть безопасный доступ к файлам."
     },
-    "restrictedPasswordDialog": {
+    "restrictedPasswordModal": {
       "title": "Разблокировать доступ с паролем",
       "subtitle": "Добавьте дополнительный уровень безопасности, защитив ваши ссылки паролем."
     }
