--- a/src/app/i18n/locales/tw.json
+++ b/src/app/i18n/locales/tw.json
@@ -983,7 +983,7 @@
       "title": "升級以分享檔案",
       "subtitle": "基本方案不支援檔案分享。升級即可解鎖安全的檔案分享功能。"
     },
-    "restrictedPasswordDialog": {
+    "restrictedPasswordModal": {
       "title": "解鎖受密碼保護的分享",
       "subtitle": "透過為分享連結設定密碼，增加額外的安全防護。"
     }
