--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -973,7 +973,7 @@
       "title": "Upgrade zum Teilen von Dateien",
       "subtitle": "Das Teilen von Dateien ist im Essential-Tarif nicht verfügbar. Führen Sie ein Upgrade durch, um sicheres Teilen freizuschalten."
     },
-    "restrictedPasswordDialog": {
+    "restrictedPasswordModal": {
       "title": "Passwortgeschütztes Teilen freischalten",
       "subtitle": "Fügen Sie eine zusätzliche Sicherheitsebene hinzu, indem Sie Ihre geteilten Links mit einem Passwort schützen."
     }
