feat: handle error while fetching the user tier

--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -1034,7 +1034,8 @@
     "errorDeletingFromTrash": "Beim Löschen der Elemente aus dem Papierkorb ist ein Fehler aufgetreten.",
     "maxSizeUploadLimitError": "Datei zu groß (größer als 40 GB)",
     "braveNotSupportMultiplePhotosDowload": "Brave unterstützt nicht das Herunterladen mehrerer Fotos.",
-    "updateAvatarError": "Fehler beim Aktualisieren des Avatars"
+    "updateAvatarError": "Fehler beim Aktualisieren des Avatars",
+    "featuresUnavailable": "Einige Funktionen sind möglicherweise nicht verfügbar"
   },
   "backups": {
     "backups-from": "Backups von {{deviceName}}",
