--- a/src/app/i18n/locales/tw.json
+++ b/src/app/i18n/locales/tw.json
@@ -1045,7 +1045,8 @@
     "maxSizeUploadLimitError": "文件過大（大於40GB）",
     "connectionLostError": "網絡連接已丟失",
     "errorLoadingTrashItems": "加載垃圾桶項目時出錯",
-    "updateAvatarError": "更新頭像時發生錯誤"
+    "updateAvatarError": "更新頭像時發生錯誤",
+    "featuresUnavailable": "某些功能可能無法使用"
   },
   "backups": {
     "backups-from": "來自{{deviceName}}的備份",
