--- a/src/app/i18n/locales/zh.json
+++ b/src/app/i18n/locales/zh.json
@@ -1080,7 +1080,8 @@
     "maxSizeUploadLimitError": "文件太大（大于40GB）",
     "connectionLostError": "互联网连接丢失",
     "errorLoadingTrashItems": "加载垃圾箱内的项目时出错",
-    "updateAvatarError": "更新头像时出错"
+    "updateAvatarError": "更新头像时出错",
+    "featuresUnavailable": "某些功能可能无法使用"
   },
   "backups": {
     "backups-from": "来自 {{deviceName}} 的备份",
