--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -992,7 +992,7 @@
     },
     "restrictedSharingModal": {
       "title": "Обновите тариф, чтобы делиться файлами",
-      "subtitle": "Общий доступ к файлам недоступен в тарифе Essential. Обновите тариф, чтобы открыть безопасный доступ к файлам."
+      "subtitle": "Обмен файлами недоступен в вашем текущем тарифе. Обновите тариф, чтобы открыть безопасный доступ к файлам."
     },
     "restrictedPasswordModal": {
       "title": "Разблокировать доступ с паролем",
