--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -971,7 +971,7 @@
     },
     "restrictedSharingModal": {
       "title": "Upgrade zum Teilen von Dateien",
-      "subtitle": "Das Teilen von Dateien ist im Essential-Tarif nicht verfügbar. Führen Sie ein Upgrade durch, um sicheres Teilen freizuschalten."
+      "subtitle": "Das Teilen von Dateien ist in Ihrem aktuellen Tarif nicht verfügbar. Führen Sie ein Upgrade durch, um sicheres Teilen freizuschalten."
     },
     "restrictedPasswordModal": {
       "title": "Passwortgeschütztes Teilen freischalten",
