Update mobile detection logic and changed translated text in open app button

--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -182,7 +182,7 @@
     },
     "universalLinkSuccess": {
       "loginAs": "Log in as",
-      "openDesktopApp": "Open the desktop app",
+      "openApp": "Open the app",
       "anotherAccount": "Use another account?",
       "login": "Log in"
     }
