--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -165,7 +165,7 @@
     },
     "universalLinkSuccess": {
       "loginAs": "войти в систему как",
-      "openDesktopApp": "Открыть приложение для рабочего стола",
+      "openApp": "Откройте приложение",
       "anotherAccount": "Использовать другую учетную запись?",
       "login": "Войти"
     }
