--- a/src/app/i18n/locales/tw.json
+++ b/src/app/i18n/locales/tw.json
@@ -181,7 +181,7 @@
     },
     "universalLinkSuccess": {
       "loginAs": "以...登錄",
-      "openDesktopApp": "打開桌面應用",
+      "openApp": "開放申請",
       "anotherAccount": "使用其他帳戶？",
       "login": "登錄"
     }
