--- a/src/app/i18n/locales/zh.json
+++ b/src/app/i18n/locales/zh.json
@@ -179,7 +179,7 @@
     },
     "universalLinkSuccess": {
       "loginAs": "登录为",
-      "openDesktopApp": "打开桌面应用程序",
+      "openApp": "开放申请",
       "anotherAccount": "使用另一个帐户？",
       "login": "登录"
     }
